Fix some minor formatting with vertical spacing

--- a/water-app/src/map_source/gif_image_frame_style.css
+++ b/water-app/src/map_source/gif_image_frame_style.css
@@ -1,6 +1,7 @@
 #gif-image-frame-container {
     text-align: center;
     width: 60vw;
+    height: 80vh;
     display: block;
     margin: 3vh auto 5vh;
     vertical-align: top;
